# ChangeLog for virtual/perl-Text-Tabs+Wrap
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Text-Tabs+Wrap/ChangeLog,v 1.26 2013/08/16 07:18:04 patrick Exp $

*perl-Text-Tabs+Wrap-2013.52.300 (16 Aug 2013)

  16 Aug 2013; Patrick Lauer <patrick@gentoo.org>
  +perl-Text-Tabs+Wrap-2013.52.300.ebuild:
  Bump

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  perl-Text-Tabs+Wrap-2012.81.800.ebuild:
  Stable for sparc, wrt bug #458122

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  perl-Text-Tabs+Wrap-2012.81.800.ebuild:
  Stable for ia64, wrt bug #458122

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  perl-Text-Tabs+Wrap-2012.81.800.ebuild:
  Stable for alpha, wrt bug #458122

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  perl-Text-Tabs+Wrap-2012.81.800.ebuild:
  Stable for ppc, wrt bug #458122

  18 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  perl-Text-Tabs+Wrap-2012.81.800.ebuild:
  Stable for ppc64, wrt bug #458122

  18 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  perl-Text-Tabs+Wrap-2012.81.800.ebuild:
  Stable for x86, wrt bug #458122

  18 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  perl-Text-Tabs+Wrap-2012.81.800.ebuild:
  Stable for amd64, wrt bug #458122

*perl-Text-Tabs+Wrap-2012.81.800 (22 Aug 2012)

  22 Aug 2012; Torsten Veller <tove@gentoo.org>
  +perl-Text-Tabs+Wrap-2012.81.800.ebuild:
  Version bump

*perl-Text-Tabs+Wrap-2009.30.500-r2 (21 May 2012)

  21 May 2012; Torsten Veller <tove@gentoo.org>
  -perl-Text-Tabs+Wrap-2009.30.500-r1.ebuild,
  +perl-Text-Tabs+Wrap-2009.30.500-r2.ebuild:
  Add perl-5.16 as provider

  28 Jun 2011; Torsten Veller <tove@gentoo.org>
  perl-Text-Tabs+Wrap-2009.30.500-r1.ebuild:
  Add perl-5.12.4 virtual

*perl-Text-Tabs+Wrap-2009.30.500-r1 (18 Jun 2011)

  18 Jun 2011; Torsten Veller <tove@gentoo.org>
  -perl-Text-Tabs+Wrap-2009.30.500.ebuild,
  +perl-Text-Tabs+Wrap-2009.30.500-r1.ebuild:
  Add perl-5.14 as provider
