@@ -1,5 +1,16 @@
-EBUILD perl-Text-Tabs+Wrap-2009.30.500-r2.ebuild 579 SHA256 41e7e291e95cef448530e22f1a699d225621b72413a998012421b8c63b7ff8ce SHA512 80602045a232761e4362a8e318c77e438604a211e3eb7907a5108cd214b732189c8ff448d7065f388f3c347f98851eb4135b4ba5ce0866c000a602ef3ab302ee WHIRLPOOL 98a7b1d5c610adaa9a6d50fc9ba8683031a243b54db4416e181c66a141a0e5e6ae8ca8da623855e765f2bceaa30cfa82325bfde0372d929fbf738e19cb986a5f
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 EBUILD perl-Text-Tabs+Wrap-2012.81.800.ebuild 437 SHA256 3c2e21ff080d520bf0312ac6e45f314e16929cb89b2cb38bdc0ab65ca746574f SHA512 7a115dc657ed2ff28b23bad6a51a51ff9e07f590856d1428de9058f6469f19fc529569853ab204ea904b7934de7ff6d914e7c92a4a600c6beb1ac2bcc52d45d6 WHIRLPOOL 11043b246c45fe27286d4d7571aab639b0c15211643761fd0b554f6394aee3c4f7db395db4a3f671c171eca25173f7d14e776031f51dec3dc9c1728f267015ab
 EBUILD perl-Text-Tabs+Wrap-2013.52.300.ebuild 448 SHA256 eb6a7455b4bdd330d7c504a56eeea078cadb890788ba1b2a760aa60fd2e1b7ff SHA512 1b92367ba6b0fd9f943621ab5bb5b8cf90330d225a6fa8918a5bcdd2579d564a3ad40c3557d3a44ce0f9f79dae5f8b1eaac1b77290fbfc96fea593a81c4a0137 WHIRLPOOL 75f433fa2677bb1d90da81809ad149434355bd7c4a4692f682ad57d3dad53bb60d0dcdb3b3d81b3aac20f1d0e8baf06d99061663f1dde9070fd52f2b490799ae
-MISC ChangeLog 3857 SHA256 8dde217cb14f229338dd5b73ed370482d0909b134b852ce05902c4ff21e54d72 SHA512 5207eaebe5a1b8bd5debd3375266cc0e3987e6de232ba79c5342bfb70f4e4d2d631292f91fcbdc6a32cb4916b9f305169a4e64aa53f7ff49920334cc6c7024c4 WHIRLPOOL c72ce7774b4c91e098d6e4365d963ac1034ea50f3c525deb0dbeee82e7f04de7da29d0a3d2bca8605f1efaa29286be56a1fb668dd37b625ccd13a7364ee517bc
+MISC ChangeLog 3965 SHA256 d46c1fb64f4bc8b6ef3a9dedc6f9170b5d5938cf56f3a1129bdf4517080ff065 SHA512 a950ad0a07faa133cc451bee8e7e51cf74447552c1e716c531186843a791178c3e660aaff5aff8fd26b4fd65d98d1cbe6aff39c2f2cfebb717835d907542c8f3 WHIRLPOOL 62b1975b1248bf477ab7e3f93012b4f83825d5628b6a772f5b14626af20e384805202bfa3f52dfa3f38be1a3f1c1db983576c032e4c95316857486ad178b4787
 MISC metadata.xml 158 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710 SHA512 0b83af178d8e59a07953fc2582b6e4177ec933439a6638de4f222e4e9b6c21135ca1702f7f4838624e283d39db0d3f4d4227ddb6108dbb06cdcc09ebf9d6bc55 WHIRLPOOL 696c0536d7047d00bd1590ddb9bebd01caec0e15b3a970828eebe526b46f14d61eec5bd541db7d4628bdff743461198158832e2bdb47e31a5523ad63f16708bc
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iJwEAQEIAAYFAlLBgXEACgkQG9wOWsQutdZMfAP/fGm0v71b6wkgxSh18Zi1HuXW
+f5SdO28JKSlJ5MBbRfrYcGUSZlmVkmRo2bh7EYR7w3M672nMrJpJ0L3BxgwdKC0O
+a9uG/vKXIccS1l+S6vF+w/grWB23z+Hw6XVFY65+/Zb5rXkiIJMgeB08YuhtjcT5
+7OYJmu5JMBEtZk3kLsM=
+=2kM5
+-----END PGP SIGNATURE-----
